[gd_scene load_steps=7 format=3 uid="uid://dv86um48t5t2f"]

[ext_resource type="Script" path="res://Scripts/Movable Box.gd" id="1_huk4a"]
[ext_resource type="Texture2D" uid="uid://clpnrv4dkiaq5" path="res://Assets/Box.png" id="1_mlwbb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rv10b"]
size = Vector2(60, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j51x7"]
size = Vector2(20, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uk6er"]
size = Vector2(7, 54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yvnep"]
size = Vector2(7, 54)

[node name="Movable Box" type="CharacterBody2D"]
collision_layer = 17
collision_mask = 17
script = ExtResource("1_huk4a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rv10b")

[node name="Box" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("1_mlwbb")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 24)
shape = SubResource("RectangleShape2D_j51x7")

[node name="Left" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2(-30.5, 0)
shape = SubResource("RectangleShape2D_uk6er")

[node name="Right" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2(30.5, 0)
shape = SubResource("RectangleShape2D_yvnep")

[connection signal="area_entered" from="Left" to="." method="_on_left_area_entered"]
[connection signal="area_exited" from="Left" to="." method="_on_left_area_exited"]
[connection signal="area_entered" from="Right" to="." method="_on_right_area_entered"]
[connection signal="area_exited" from="Right" to="." method="_on_right_area_exited"]
